# music_app

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/essentia_build/: Dockerfile  _entrypoint.sh  build.sh
android/essentia_build/essentia_ffi_wrapper/: CMakeLists.txt  essentia_ffi_wrapper.cpp
android/essentia_build/essentia_ffi_wrapper/include/: essentia_ffi_wrapper.h
assets/analyzed_examples/input/: c_major_scale.m4a  cant_help_falling_in_love.m4a  dont_stop_believing.m4a  heathens.m4a  hey_jude.m4a  nur_ein_wort.m4a  on_the_nature_of_daylight.m4a  rolling_in_the_deep.m4a
assets/analyzed_examples/output/c_major_scale/: chromagram.csv  hpcp.csv  meta.csv
assets/analyzed_examples/output/cant_help_falling_in_love/: chromagram.csv  hpcp.csv  meta.csv
assets/analyzed_examples/output/dont_stop_believing/: chromagram.csv  hpcp.csv  meta.csv
assets/analyzed_examples/output/every_note_piano/: chromagram.csv  meta.csv
assets/analyzed_examples/output/g_major_scale_cello/: chromagram.csv  meta.csv
assets/analyzed_examples/output/heathens/: chromagram.csv  hpcp.csv  meta.csv
assets/analyzed_examples/output/hey_jude/: chromagram.csv  hpcp.csv  meta.csv
assets/analyzed_examples/output/nur_ein_wort/: chromagram.csv  hpcp.csv  meta.csv
assets/analyzed_examples/output/on_the_nature_of_daylight/: chromagram.csv  hpcp.csv  meta.csv
assets/analyzed_examples/output/rolling_in_the_deep/: chromagram.csv  hpcp.csv  meta.csv
assets/buffers/: c_major_scale.raw  cant_help_falling_in_love.raw  dont_stop_believing.raw  heathens.raw  rolling_in_the_deep.raw
audioanalysis/: CMakeLists.txt
audioanalysis/include/: audioanalyzer.h  audioloader.h  capi.h  chromaconverter.h  chromaenhancer.h  conversion.h  fouriertransformer.h  framecutter.h  keyfinder.h  parameters.h  peakfinder.h  percussionremover.h
audioanalysis/src/: audioanalyzer.cpp  audioloader.cpp  capi.cpp  chromaconverter.cpp  chromaenhancer.cpp  fouriertransformer.cpp  framecutter.cpp  keyfinder.cpp  main.cpp  parameters.cpp  peakfinder.cpp  percussionremover.cpp
build_tools/docker/android/: Dockerfile  build_audioanalysis.sh
docs/ios/: backend_build.md
essentia/: essentia_github_repo_instructions.md
essentia/essentia_c_api/include/: algorithms.h  c_api.h
essentia/essentia_c_api/src/: algorithms.cpp  c_api.cpp
essentia/ios/: CMakeLists.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcodeproj/xcshareddata/xcschemes/: AudioBufferLoader.xcscheme
ios/Runner/AudioLoader/include/: AudioBufferLoader.h
ios/Runner/AudioLoader/src/: AudioBufferLoader.mm
ios/Runner/Base.lproj/: Main.storyboard
lib/: archive.dart  audio.dart  audio_player.dart  audio_recorder.dart  essentia.dart  home.dart  import.dart  main.dart
lib/audio/: audio_player.dart  audio_recorder.dart  audio_tile.dart
lib/audio/platform/: audio_recorder_io.dart
lib/core/: app_settings.dart  custom_app_bar.dart
lib/ffi/: audio_processing_ffi.dart  audioanalysis_ffi.dart
lib/screens/: analyze.dart  archive.dart  audio.dart  backend.dart  help.dart  home.dart  import.dart  load_assets.dart  settings.dart  visualize.dart
lib/utils/: chromagram_builder.dart  constants.dart  conversion.dart  custom_app_bar.dart  intensity_bar.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
